--- a/index.html
+++ b/index.html
@@ -22,38 +22,63 @@
 <body>
     <h1>Le super Chat d'INTM !</h1>
     <form action="/" method="post" id="formulaire_chat">
-        <textarea rows="4" cols="100" name="message" id="message" placeholder="Votre message..." autofocus></textarea>
-        <input type="button" onclick="ajoutbalisecode()" value="Code" />
-        <input type="color" id="colorpicket" value="Code" />
-        <input type="button" onclick="envoiecouleur()" value="Envoyer !" />
-        <!--      <input type="submit" id="envoi_message" value="Envoyer" />-->
+        <table>
+            <tr>
+                <td ROWSPAN=4>
+                    <textarea rows="6" cols="100" name="message" id="message" placeholder="Votre message..."
+                        autofocus></textarea></td>
+                        <td> Son actif <input type="checkbox" id="checkboxetatson" onchange="changerson()" checked=true /><img id="imagehp" src="images/hp-on.png" style="width: 20px; height: 20px"/></td></tr>
+
+              <tr><td>  <input type="button" onclick="ajoutbalisecode()" value="Code" /></td></tr>
+               <tr><td> <input type="color" id="colorpicket" value="Code" /></td></tr>
+                <tr><td><input type="button" onclick="envoiecouleur()" value="Envoyer !" /></td></tr>
+        </table>
     </form>
     <pre id="zone_chat">
-        </pre>
+    </pre>
+    <audio controls style="visibility: hidden" id="notif">
+        <source src="audio/notif.mp3" type="audio/mpeg">etatson
+        Your browser does not support the audio element.etatson
+    </audio>
+    <audio controls style="visibility: hidden" id="online">
+        <source src="audio/online.mp3" type="audio/mpeg">
+        Your browser does not support the audio element.
+    </audio>
     <script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
     <script src="/socket.io/socket.io.js"></script>
     <script>
-
-        var popip = window.location.href; 
+        var sonactif = true;
+        var popip = window.location.href;
 
 
         //var addrserv = prompt('ip:port du serveur ?');
         // Connexion à socket.io
-        var addrserv = popip.substr(0, popip.length-1);
-        console.log(addrserv);;
+        var addrserv = popip.substr(0, popip.length - 1);
+        //console.log(addrserv);
         var socket = io.connect(addrserv);
-        
+
         // On demande le pseudo, on l'envoie au serveur et on l'affiche dans le titre
         var pseudo = prompt('Quel est votre pseudo ?');
         socket.emit('nouveau_client', pseudo);
         document.title = pseudo + ' - ' + document.title;
         // Quand on reçoit un message, on l'insère dans la page
         socket.on('message', function (data) {
-            insereMessage(data.pseudo, data.message)
+            insereMessage(data.pseudo, data.message);
+            if (sonactif == true) {
+                document.getElementById("notif").play();
+            }
         })
+
+        socket.on('recepcode', function (data) {
+            insereMessage(data.pseudo, data.message);
+        })
+
         // Quand un nouveau client se connecte, on affiche l'information
         socket.on('nouveau_client', function (pseudo) {
             $('#zone_chat').prepend('<p><em>' + pseudo + ' a rejoint le Chat !</em></p>');
+            if (sonactif == true) {
+                document.getElementById('online').play();
+            }
         })
         // Lorsqu'on envoie le formulaire, on transmet le message et on l'affiche sur la page
         $('#formulaire_chat').submit(function () {
@@ -104,6 +129,17 @@
                 out += too[i] + " ";
             }
             return out;
+        }
+
+        function changerson(){
+            sonactif=document.getElementById("checkboxetatson").checked;
+            if(sonactif==true){
+                document.getElementById('imagehp').src = 'images/hp-on.png';
+            }
+            else{
+                document.getElementById('imagehp').src = 'images/hp-off.png';
+            }
+
         }
     </script>
 </body>
